charts/all/octoprint/templates/octoprint-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octoprint
  namepace: octoprint
  labels:
    application: octoprint
spec:
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: octoprint
        deploymentconfig: octoprint
      name: octoprint
    spec:
      containers:
      - name: octoprint
        image: octoprint/octoprint:latest
        securityContext:
          privileged: true
        resources:
          requests:
            memory: 2000Mi
            cpu: 1000m
          limits:
            memory: 3500Mi
            cpu: 2000m
        volumeMounts:
          - mountPath: /octoprint
            name: octoprint
            readOnly: false
          - mountPath: /dev/ttyACM0
            name: ttyacm0
            readOnly: false
          - mountPath: /dev/video0
            name: video0
            readOnly: false
      volumes:
      - name: octoprint
        persistentVolumeClaim:
          claimName: octoprint
      - name: ttyacm0
        hostPath:
          path: /dev/ttyACM0
      - name: video0
        hostPath:
          path: /dev/video0
